Add menu New Year, fix details, asked of Ana

--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
           <ul>
             <li>
               <a
+                href="new-year-menu.html"
+                class="menu-btn"
+                data-es="🎉 Menú Año Nuevo"
+                data-en="🎉 New Year's Eve Menu"
+                data-fr="🎉 Menu Nouvel An"
+                data-it="🎉 Menu Capodanno"
+                data-ru="🎉 Новогоднее меню"
+                >🍽️ Carta comida</a
+              >
+            </li>
+
+            <li>
+              <a
                 href="carta-comida.html"
                 class="menu-btn"
                 data-es="🍽️ Carta comida"
@@ -115,12 +128,12 @@
               <a
                 href="menu-grupos.html"
                 class="menu-btn"
-                data-es="⭐ Menú Grupos"
-                data-en="⭐ Group Menu"
-                data-fr="⭐ Menu Groupes"
-                data-it="⭐ Menu Gruppi"
-                data-ru="⭐ Групповое Меню"
-                >⭐ Menú Grupos</a
+                data-es="⭐ Menús Especiales"
+                data-en="⭐ Special Set Menus"
+                data-fr="⭐ Menus Spéciaux"
+                data-it="⭐ Menu Speciali"
+                data-ru="⭐ Специальные Меню"
+                >⭐ Menús Especiales</a
               >
             </li>
           </ul>
