--- a/menu-infantil.html
+++ b/menu-infantil.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Marcellus&family=Dancing+Script:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="components/header.css" />
     <!-- Iconos Banderas -->
     <link
       rel="stylesheet"
@@ -20,7 +21,11 @@
     <!-- JS idiomas -->
     <script defer src="js/clear.js"></script>
     <script defer src="js/language-select.js"></script>
+    <script defer src="components/header.js"></script>
   </head>
+
+  <header id="app-header" data-title="🍹 Carta de Bebidas"></header>
+
   <body>
     <div class="container">
       <!-- Selector de idioma -->
@@ -66,49 +71,73 @@
         >
           Menú infantil
         </h1>
-        <div class="kids-menu-items">
+        <div class="menu-infantil-bloque">
           <div
-            data-es="1º Croquetas y calamares"
-            data-en="1st: Croquettes and calamari"
-            data-fr="1er: Croquettes et calamars"
-            data-it="1º: Crocchette e calamari"
-            data-ru="1: Крокеты и кальмары"
+            class="primero"
+            data-es="Primero:"
+            data-en="First course:"
+            data-fr="Entrée&nbsp;:"
+            data-it="Primo:"
+            data-ru="Первое:"
           >
-            1º Croquetas y calamares
+            Primero:
+          </div>
+          <div class="kids-menu-items">
+            <div
+              data-es="Calamares y Croquetas"
+              data-en="Calamari and Croquettes"
+              data-fr="Croquettes et calamars"
+              data-it="Crocchette e calamari"
+              data-ru="Кальмары и крокеты"
+            >
+              Calamares y Croquetas
+            </div>
+
+            <div
+              class="segundo"
+              data-es="Segundo:"
+              data-en="Second course:"
+              data-fr="Plat principal&nbsp;:"
+              data-it="Secondo:"
+              data-ru="Второе:"
+            >
+              Segundo:
+            </div>
+            <div
+              data-es="Pollo empanado con patatas fritas"
+              data-en="Breaded chicken with fries"
+              data-fr="Poulet pané avec frites"
+              data-it="Pollo impanato con patatine"
+              data-ru="Курица в панировке с картофелем фри"
+            >
+              Pollo empanado con patatas fritas
+            </div>
+            <div
+              class="kids-menu-drink"
+              data-es="Una bebida incluida"
+              data-en="One drink included"
+              data-fr="Une boisson incluse"
+              data-it="Una bevanda inclusa"
+              data-ru="Включен напиток"
+            >
+              Una bebida incluida
+            </div>
+          </div>
+          <div class="kids-menu-price">
+            <span class="price-main">12</span
+            ><span class="price-cents">,95</span
+            ><span class="price-eur">€</span>
           </div>
           <div
-            data-es="2º Pollo empanado con patatas fritas"
-            data-en="2nd: Breaded chicken with fries"
-            data-fr="2e: Poulet pané avec frites"
-            data-it="2º: Pollo impanato con patatine"
-            data-ru="2: Курица в панировке с картофелем фри"
+            class="kids-menu-note"
+            data-es="* Sólo para menores de 12 años"
+            data-en="* Only for children under 12"
+            data-fr="* Réservé aux moins de 12 ans"
+            data-it="* Solo per bambini sotto i 12 anni"
+            data-ru="* Только для детей до 12 лет"
           >
-            2º Pollo empanado con patatas fritas
+            * Sólo para menores de 12 años
           </div>
-          <div
-            class="kids-menu-drink"
-            data-es="Una bebida incluida"
-            data-en="One drink included"
-            data-fr="Une boisson incluse"
-            data-it="Una bevanda inclusa"
-            data-ru="Включен напиток"
-          >
-            Una bebida incluida
-          </div>
-        </div>
-        <div class="kids-menu-price">
-          <span class="price-main">12</span><span class="price-cents">,95</span
-          ><span class="price-eur">€</span>
-        </div>
-        <div
-          class="kids-menu-note"
-          data-es="* Sólo para menores de 12 años"
-          data-en="* Only for children under 12"
-          data-fr="* Réservé aux moins de 12 ans"
-          data-it="* Solo per bambini sotto i 12 anni"
-          data-ru="* Только для детей до 12 лет"
-        >
-          * Sólo para menores de 12 años
         </div>
       </div>
 
