Correcciones y actyualizaciones menuis

--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
           <ul>
             <li>
               <a
+                href="menu-navidad.html"
+                class="menu-btn"
+                data-es="🎉 Menú Navidad"
+                data-en="🎉 Christmas Menu"
+                data-fr="🎉 Menu Noël"
+                data-it="🎉 Menu Natale"
+                data-ru="🎉 Рождественское меню"
+                >🍽️ Menu Navidad</a
+              >
+            </li>
+            <li>
+              <a
                 href="new-year-menu.html"
                 class="menu-btn"
                 data-es="🎉 Menú Año Nuevo"
@@ -84,6 +96,18 @@
                 data-it="🎉 Menu Capodanno"
                 data-ru="🎉 Новогоднее меню"
                 >🍽️ Carta comida</a
+              >
+            </li>
+            <li>
+              <a
+                href="menu-especiales.html"
+                class="menu-btn"
+                data-es="⭐ Menús Especiales"
+                data-en="⭐ Special Set Menus"
+                data-fr="⭐ Menus Spéciaux"
+                data-it="⭐ Menu Speciali"
+                data-ru="⭐ Специальные Меню"
+                >⭐ Menús Especiales</a
               >
             </li>
 
@@ -121,19 +145,6 @@
                 data-it="⭐ Menu Bambini"
                 data-ru="⭐ Детское Меню"
                 >⭐ Menú infantil</a
-              >
-            </li>
-
-            <li>
-              <a
-                href="menu-grupos.html"
-                class="menu-btn"
-                data-es="⭐ Menús Especiales"
-                data-en="⭐ Special Set Menus"
-                data-fr="⭐ Menus Spéciaux"
-                data-it="⭐ Menu Speciali"
-                data-ru="⭐ Специальные Меню"
-                >⭐ Menús Especiales</a
               >
             </li>
           </ul>
