All well done, finish of the first stage

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
       <footer>
         <div class="footer-content">
           <p>
-            Muelle 8, zona de Levante — Alicante, España<br />
-            <span class="phone">T. 966 09 64 05</span>
+            Av. Santander, 16, 03540 Alicante<br />
+            <span class="phone">T. 965 16 31 10</span>
           </p>
         </div>
       </footer>
