--- a/menu-infantil.html
+++ b/menu-infantil.html
@@ -24,41 +24,9 @@
     <script defer src="components/header.js"></script>
   </head>
 
-  <header id="app-header" data-title="🍹 Carta de Bebidas"></header>
-
   <body>
+    <header id="app-header" data-title="🍹 Menú Infantil"></header>
     <div class="container">
-      <!-- Selector de idioma -->
-      <header class="language-selector">
-        <ul>
-          <li>
-            <button data-lang="es" class="active" aria-label="Español">
-              <span class="fi fi-es"></span>
-            </button>
-          </li>
-          <li>
-            <button data-lang="en" aria-label="English">
-              <span class="fi fi-gb"></span>
-            </button>
-          </li>
-          <li>
-            <button data-lang="fr" aria-label="Français">
-              <span class="fi fi-fr"></span>
-            </button>
-          </li>
-          <li>
-            <button data-lang="it" aria-label="Italiano">
-              <span class="fi fi-it"></span>
-            </button>
-          </li>
-          <li>
-            <button data-lang="ru" aria-label="Русский">
-              <span class="fi fi-ru"></span>
-            </button>
-          </li>
-        </ul>
-      </header>
-
       <!-- Menú Infantil Normal -->
       <div class="kids-menu-card">
         <h1
