Aplicar correciones menus especiales en ruso, crear indelx_html.old, guardando los 2 butones navidad y año nuevo

--- a/menu-especiales.html
+++ b/menu-especiales.html
@@ -87,7 +87,7 @@
       data-en="Rice of choice (a banda, pork & vegetables, or black rice)"
       data-fr="Riz au choix (a banda, porc et légumes ou riz noir)"
       data-it="Riso a scelta (a banda, maiale e verdure o riso nero)"
-      data-ru="Рис на выбор (a banda, с мясом и овощами, или чёрный рис)">
+      data-ru="Рис на выбор (a banda, с мясом и овощами и свининой, или чёрный рис)">
       Arroz a elegir (a banda, magro y verduras o negro)
     </li>
     <li 
@@ -139,7 +139,7 @@
       data-en="Country-style scrambled eggs"
       data-fr="Œufs brouillés façon campagnarde"
       data-it="Uova strapazzate rustiche"
-      data-ru="Деревенская яичница-болтунья">
+      data-ru="Деревенская яичница-болтунья с хамоном и перцем падрон">
       Revuelto campero
     </li>
     <li 
@@ -160,12 +160,12 @@
     </li>
     <li
       class="bold-text" 
-      data-es="Carrillada de ibérico a la cordobesa con patatas deluxe caseras o Dorada a la espalda o Arroz (abanda, magro con verdura o negro)"
+      data-es="Carrillada de ibérico a la cordobesa con patatas deluxe caseras o Dorada a la espalda o Arroz (a banda, magro con verdura o negro)"
       data-en="Cordoban-style Iberian pork cheek with homemade deluxe potatoes or Grilled gilthead bream or Rice (a banda, pork & vegetables or black rice)"
       data-fr="Joue de porc ibérique à la cordouane avec pommes de terre deluxe maison ou Dorade grillée ou Riz (a banda, porc & légumes ou riz noir)"
       data-it="Guancia di maiale iberico alla cordovese con patate deluxe fatte in casa oppure Orata alla griglia oppure Riso (a banda, maiale e verdure o riso nero)"
-      data-ru="Щека иберийской свинины по-кордобски с картофелем делюкс или Дорада на гриле или Рис (a banda, свинина с овощами или черный рис)">
-      Carrillada de ibérico a la cordobesa con patatas deluxe caseras o Dorada a la espalda o Arroz (abanda, magro con verdura o negro)
+      data-ru="Щека иберийской свинины по-кордобски с картофелем делюкс или Дорада на запеченая или Рис (a banda, свинина с овощами и свининой или черный рис)">
+      Carrillada de ibérico a la cordobesa con patatas deluxe caseras o Dorada a la espalda o Arroz (a banda, magro con verdura o negro)
     </li>
     <li 
       data-es="Postre especial de la casa"
@@ -245,23 +245,23 @@
     </li>
 
     <li
-      data-es="Puntillas a la andaluza"
+      data-es="Chopitos a la andaluza"
       data-en="Andalusian-style baby squid"
       data-fr="Puntillitas à l'andalouse"
       data-it="Puntillitas alla andalusa"
-      data-ru="Мелкие кальмары по-андалусски">
+      data-ru="Маленькие кальмары по-андалусски">
       Puntillas a la andaluza
     </li>
 
     <li
       class="bold-text"
-      data-es="Entrecot de choto o dorarada a la espalda o arroz (abanda, magro y verduras o negro)"
+      data-es="Entrecot de choto o dorarada a la espalda o arroz (a banda, magro y verduras o negro)"
       data-en="Choto entrecôte or grilled sea bream or rice (a banda, pork & vegetables, or black rice)"
       data-fr="Entrecôte de chevreau ou dorade grillée ou riz (a banda, porc et légumes ou riz noir)"
       data-it="Entrecôte di capretto o orata alla griglia o riso (a banda, maiale e verdure o riso nero)"
-      data-ru="Антрекот из козлятины или дорада на гриле или рис (a banda, со свининой и овощами или чёрный)">
+      data-ru="Антрекот из козлятины или дорада на запеченая или рис (a banda, со свининой и овощами или чёрный)">
       Entrecot de choto o dorarada a la espalda o arroz
-      (abanda, magro y verduras o negro)
+      (a banda, magro y verduras o negro)
     </li>
 
     <li
@@ -363,13 +363,13 @@
 
     <li
     class="bold-text"
-      data-es="Entrecot de choto o dorada a la espalda o arroz (abanda, magro y verduras o negro)"
+      data-es="Entrecot de choto o dorada a la espalda o arroz (a banda, magro y verduras o negro)"
       data-en="Choto entrecôte or grilled sea bream or rice (a banda, pork & vegetables, or black rice)"
       data-fr="Entrecôte de chevreau ou dorade grillée ou riz (a banda, porc et légumes ou riz noir)"
       data-it="Entrecôte di capretto o orata alla griglia o riso (a banda, maiale e verdure o riso nero)"
-      data-ru="Антрекот из козлятины или дорада на гриле или рис (a banda, со свининой и овощами или чёрный)">
+      data-ru="Антрекот из козлятины или дорада на запеченая или рис (a banda, со свининой и овощами или чёрный)">
       Entrecot de choto odorada a la espalda o arroz
-      (abanda, magro y verduras o negro)
+      (a banda, magro y verduras o negro)
     </li>
 
     <li
