Aplicar todas las modificaciones indicadas por whatsapp hata el dia de hoy 20260214

--- a/menu-especiales.html
+++ b/menu-especiales.html
@@ -367,7 +367,7 @@
       data-en="Choto entrecôte or grilled sea bream or rice (a banda, pork & vegetables, or black rice)"
       data-fr="Entrecôte de chevreau ou dorade grillée ou riz (a banda, porc et légumes ou riz noir)"
       data-it="Entrecôte di capretto o orata alla griglia o riso (a banda, maiale e verdure o riso nero)"
-      data-ru="Антрекот из козлятины или дорада на запеченая или рис (a banda, со свининой и овощами или чёрный)">
+      data-ru="Стейк говяжий, дорада или рис (черный с краской кальмара, свининой и овощами или с морепродуктами)">
       Entrecot de choto odorada a la espalda o arroz
       (a banda, magro y verduras o negro)
     </li>
@@ -464,7 +464,7 @@
     <li data-es="Cazón en adobo" data-en="Marinated dogfish" data-fr="Roussette marinée" data-it="Palombo marinato" data-ru="Маринованная акула (касон)">
       Cazón en adobo
     </li>
-    <li data-es="Minutejos" data-en="Crispy pork ears" data-fr="Oreilles de porc croustillantes" data-it="Orecchie di maiale croccanti" data-ru="Минутехос (хрустящие свиные ушки)">
+    <li data-es="Minutejos" data-en="Crispy pork ears" data-fr="Oreilles de porc croustillantes" data-it="Orecchie di maiale croccanti" data-ru="Свиные ушки)">
       Minutejos
     </li>
     <li data-es="Tortitas de camarón" data-en="Shrimp fritters" data-fr="Galettes de crevettes" data-it="Frittelle di gamberetti" data-ru="Лепешки с креветками">
@@ -479,10 +479,10 @@
     <li data-es="Boquerones en adobo" data-en="Marinated anchovies" data-fr="Anchois marinés" data-it="Alici marinate" data-ru="Маринованные анчоусы">
       Boquerones en adobo
     </li>
-    <li data-es="Lacón a la gallega" data-en="Galician-style pork shoulder" data-fr="Épaule de porc à la galicienne" data-it="Spalla di maiale alla galiziana" data-ru="Свинина по-галисийски">
+    <li data-es="Lacón a la gallega" data-en="Galician-style pork shoulder" data-fr="Épaule de porc à la galicienne" data-it="Spalla di maiale alla galiziana" data-ru="Хамон вареный ">
       Lacón a la gallega
     </li>
-    <li data-es="Chori-morci calentito" data-en="Warm chorizo and black pudding" data-fr="Chorizo et boudin noir chauds" data-it="Chorizo e sanguinaccio caldi" data-ru="Горячее ассорти из чоризо и морсильи">
+    <li data-es="Chori-morci calentito" data-en="Warm chorizo and black pudding" data-fr="Chorizo et boudin noir chauds" data-it="Chorizo e sanguinaccio caldi" data-ru="Кровянка и чорисо">
       Chori-morci calentito
     </li>
     <li data-es="Ensaladilla rusa" data-en="Russian salad" data-fr="Salade russe" data-it="Insalata russa" data-ru="Русский салат (Оливье)">
